--- a/clubsapp/templates/record_minutes.html
+++ b/clubsapp/templates/record_minutes.html
@@ -20,6 +20,19 @@
                 {% endif %}
             </div>
             <div class="form-group">
+                {{ form.location.label(class="form-control- label") }}
+                {% if form.location.errors %}
+                    {{ form.location(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                    {% for error in form.location.errors %}
+                    <span>{{ error }}</span>
+                {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.location(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+            <div class="form-group">
                 <label> Attendance </label>
                 <table>
                     <tr>
@@ -58,7 +71,7 @@
                 {% else %}
                     {{ form.notes(class="form-control form-control-lg") }}
                 {% endif %}
-                </div>
+            </div>
         </fieldset>
         <div class="form-group">
             {{ form.submit(class="btn btn-outline-info")}}
