--- a/clubsapp/templates/record_minutes.html
+++ b/clubsapp/templates/record_minutes.html
@@ -34,29 +34,33 @@
             </div>
             <div class="form-group">
                 <label> Attendance </label>
-                <table>
-                    <tr>
-                        <th>Name</th>
-                        <th>Is here?</th>
-                    </tr>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Name</th>
+                            <th scope="col">Is here?</th>
+                        </tr>
+                    </thead>
+                    <tbody>
                     {% for attend in form.attendance %}
                         {% set i = loop.index - 1 %}
                         <tr>
-                        <td for="{{ i }}"> {{ members[i].firstname }} {{ members[i].lastname }} </td>
+                            <td>{{ members[i].firstname }} {{ members[i].lastname }}</td>
                             <td>
-                            {% if attend.errors %}
-                                {{ attend(class="form-control form-control-lg is-invalid") }}
-                                <div class="invalid-feedback">
-                                    {% for error in attend.errors %}
-                                        <span>{{ error }}</span>
-                                    {% endfor %}
-                                </div>
-                            {% else %}
-                                {{ attend(class="form-control form-control-lg") }}
-                            {% endif %}
+                                {% if attend.errors %}
+                                    {{ attend(class="form-control form-control-lg is-invalid") }}
+                                    <div class="invalid-feedback">
+                                        {% for error in attend.errors %}
+                                            <span>{{ error }}</span>
+                                        {% endfor %}
+                                    </div>
+                                {% else %}
+                                    {{ attend(class="form-control form-control-lg") }}
+                                {% endif %}
                             </td>
                         </tr>
                     {% endfor %}
+                    </tbody>
                 </table>
             </div>
             <div class="form-group">
