--- a/clubsapp/templates/record_minutes.html
+++ b/clubsapp/templates/record_minutes.html
@@ -78,14 +78,14 @@
                     {{ form.notes(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-            <div>
+            <div class="form-group">
             <label> Purchase Orders </label>
             <table class="table table-bordered table-striped mb-0">
                 <thead>
                     <tr>
                         <th scope = "col" width = "40px"> Payable To </th>
                         <th scope = "col" width = "15px"> Amount </th>
-                        <th scope = "col" width = "100px"> Purchase of Expenditure </th>
+                        <th scope = "col" width = "100px"> Purpose of Expenditure </th>
                     </tr>
                 </thead>
                 <tbody>
@@ -99,7 +99,7 @@
                 </tbody>
             </table>
             <div class = "row">
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-3">
                     {{ form.purchasevote.motionedby.label(class="form-control- label") }}
                     {% if form.purchasevote.motionedby.errors %}
                         {{ form.purchasevote.motionedby(class="form-control form-control-lg is-invalid") }}
@@ -112,7 +112,7 @@
                         {{ form.purchasevote.motionedby(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-3">
                     {{ form.purchasevote.secondby.label(class="form-control- label") }}
                     {% if form.purchasevote.secondby.errors %}
                         {{ form.purchasevote.secondby(class="form-control form-control-lg is-invalid") }}
@@ -125,7 +125,108 @@
                         {{ form.purchasevote.secondby(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
+                <div class="form-group col-md-3">
+                    {{ form.purchasevote.numfor.label(class="form-control- label") }}
+                    {% if form.purchasevote.numfor.errors %}
+                        {{ form.purchasevote.numfor(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                        {% for error in form.purchasevote.numfor.errors %}
+                        <span>{{ error }}</span>
+                    {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.purchasevote.numfor(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="form-group col-md-3">
+                    {{ form.purchasevote.numagainst.label(class="form-control- label") }}
+                    {% if form.purchasevote.numagainst.errors %}
+                        {{ form.purchasevote.numagainst(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                        {% for error in form.purchasevote.numagainst.errors %}
+                        <span>{{ error }}</span>
+                    {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.purchasevote.numagainst(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
             </div>
+            </div>
+            <div class = "form-group">
+                <label> Fundraisers </label>
+                <table class="table table-bordered table-striped mb-0">
+                    <thead>
+                        <tr>
+                            <th scope = "col" width = "40px"> Fundraiser Description </th>
+                            <th scope = "col" width = "15px"> Proposed Date of Event </th>
+                            <th scope = "col" width = "100px"> Purpose of Expenditure </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for formfield in form.fundform %}
+                            <tr>
+                                <td> {{ formfield.descript(class="form-control form-control-lg")}} </td>
+                                <td> {{ formfield.proposeddate(class="form-control form-control-lg")}}</td>
+                                <td> {{ formfield.expenditure(class="form-control form-control-lg")}}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+                <div class = "row">
+                    <div class="form-group col-md-3">
+                        {{ form.purchasevote.motionedby.label(class="form-control- label") }}
+                        {% if form.purchasevote.motionedby.errors %}
+                            {{ form.purchasevote.motionedby(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                            {% for error in form.purchasevote.motionedby.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.purchasevote.motionedby(class="form-control form-control-lg") }}
+                        {% endif %}
+                    </div>
+                    <div class="form-group col-md-3">
+                        {{ form.purchasevote.secondby.label(class="form-control- label") }}
+                        {% if form.purchasevote.secondby.errors %}
+                            {{ form.purchasevote.secondby(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                            {% for error in form.purchasevote.secondby.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.purchasevote.secondby(class="form-control form-control-lg") }}
+                        {% endif %}
+                    </div>
+                    <div class="form-group col-md-3">
+                        {{ form.purchasevote.numfor.label(class="form-control- label") }}
+                        {% if form.purchasevote.numfor.errors %}
+                            {{ form.purchasevote.numfor(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                            {% for error in form.purchasevote.numfor.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.purchasevote.numfor(class="form-control form-control-lg") }}
+                        {% endif %}
+                    </div>
+                    <div class="form-group col-md-3">
+                        {{ form.purchasevote.numagainst.label(class="form-control- label") }}
+                        {% if form.purchasevote.numagainst.errors %}
+                            {{ form.purchasevote.numagainst(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                            {% for error in form.purchasevote.numagainst.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.purchasevote.numagainst(class="form-control form-control-lg") }}
+                        {% endif %}
+                    </div>
+                </div>
             </div>
         </fieldset>
         <div class="form-group">
